--- a/examples/javascript/package.json
+++ b/examples/javascript/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "library-name",
+  "name": "react-screen-capture",
   "homepage": "https://github.com/Bunlong",
   "version": "0.0.0",
   "license": "MIT",
