--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-screen-capture",
-  "version": "0.0.0",
-  "description": "",
+  "version": "1.0.0",
+  "description": "A tiny React library allows you to take a snapshot of the webpage's screen or part of the screen.",
   "author": "Bunlong <bunlong.van@gmail.com>",
   "license": "MIT",
   "repository": {
