--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-screen-capture",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A tiny React library allows you to take a snapshot of the webpage's screen or part of the screen.",
   "author": "Bunlong <bunlong.van@gmail.com>",
   "license": "MIT",
@@ -81,8 +81,9 @@
     }
   ],
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0",
+    "react-scripts": ">=4.0.0"
   },
   "browser": {
     "fs": false
